<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".TermDetailActivity"
    tools:showIn="@layout/activity_term_detail">


    <TextView
        android:id="@+id/textViewTermEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/textViewTermEnd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTermStart" />

    <EditText
        android:id="@+id/editTextTermName"
        android:layout_width="254dp"
        android:layout_height="40dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/enter_term_name"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/textViewTermName"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewTermName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/textViewTermName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextStartDate"
        android:layout_width="174dp"
        android:layout_height="44dp"
        android:layout_marginTop="60dp"
        android:focusable="false"
        android:hint="@string/start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.177"
        app:layout_constraintStart_toEndOf="@+id/textViewTermStart"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewTermStart"
        android:layout_width="79dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:text="@string/textViewTermStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTermName" />

    <EditText
        android:id="@+id/editTextEndDate"
        android:layout_width="174dp"
        android:layout_height="44dp"
        android:layout_marginTop="112dp"
        android:focusable="false"
        android:hint="@string/end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.259"
        app:layout_constraintStart_toEndOf="@+id/textViewTermEnd"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewTermDetail"
        android:layout_width="399dp"
        android:layout_height="502dp"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEndDate" />

    <TextView
        android:id="@+id/textViewTermId_TermDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.436"
        app:layout_constraintStart_toEndOf="@+id/editTextStartDate"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>